src/test/resources/30/single/xhtml/valid/epubtype.xhtml
<!DOCTYPE html>	 
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="en">
  <head>
    <title>Test</title>
  </head>
  <!-- these properties are part of the EPUB SSV -->
  <body epub:type="bodymatter">
    <h1>Test</h1>
    <aside epub:type="tip">tip</aside>
    <section epub:type="endnotes">
      <h2>endnotes</h2>
      <div epub:type="endnote">endnote</div>
    </section>
  </body>
</html>
